change index.js to api.js

--- a/index.html
+++ b/index.html
@@ -45,5 +45,43 @@
         </div>
     </div>
 </body>
-<script src="./index.js"></script>
+<script src="./api.js"></script>
+<script>
+    //  default input
+    document.getElementById('url').value = "http://0.0.0.0/api_jsonrpc.php";
+    document.getElementById('user').value = "Admin";
+    document.getElementById('password').value = "zabbix";
+    document.getElementById('method').value = "template.get";
+    document.getElementById('params').value = JSON.stringify({
+        "output": "extend",
+        "filter": {
+            "host": [
+                "Template OS Linux",
+                "Template OS Windows"
+            ]
+        }
+    });
+
+
+    document.getElementById('get').addEventListener("click", function () {
+        requestZabbixAPI(
+            document.getElementById('url').value,
+            document.getElementById('user').value,
+            document.getElementById('password').value,
+            document.getElementById('method').value,
+            JSON.parse(document.getElementById('params').value),
+            /* successHandler */
+            function (response) {
+                document.getElementById('response-json').value = JSON.stringify(response);
+                console.log(response);
+            },
+            /* errorHandler */
+            function (response) {
+                //JSON.stringify(document.getElementById('response-table'));
+                document.getElementById('response-json').value = JSON.stringify(response);
+                console.log(response);
+            }
+        );
+    }, false);
+</script>
 </html>
