--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     body > div > p > label { margin-right: 0.3em; }
     body > div > p > input { margin-right: 1em; }
     #url, #params { width: 50%; }
-    #response-json { width: 100%; }
+    #request, #response { width: 100%; }
     .result {
         margin-top: 1em;
         border-top: solid 1px black;
@@ -40,8 +40,10 @@
         </p>
         <button id="get">get</button>
         <div class="result">
-            <h3>json:</h3>
-            <textarea id="response-json" rows="20" readonly></textarea>
+            <h3>request:</h3>
+            <textarea id="request" rows="2" readonly></textarea>
+            <h3>response:</h3>
+            <textarea id="response" rows="20" readonly></textarea>
         </div>
     </div>
 </body>
@@ -64,24 +66,23 @@
 
 
     document.getElementById('get').addEventListener("click", function () {
-        requestZabbixAPI(
-            document.getElementById('url').value,
-            document.getElementById('user').value,
-            document.getElementById('password').value,
-            document.getElementById('method').value,
-            JSON.parse(document.getElementById('params').value),
-            /* successHandler */
-            function (response) {
-                document.getElementById('response-json').value = JSON.stringify(response);
-                console.log(response);
-            },
-            /* errorHandler */
-            function (response) {
-                //JSON.stringify(document.getElementById('response-table'));
-                document.getElementById('response-json').value = JSON.stringify(response);
-                console.log(response);
-            }
-        );
+        let url = document.getElementById('url').value;
+        let user = document.getElementById('user').value;
+        let password = document.getElementById('password').value;
+        var method = document.getElementById('method').value;
+        var params = JSON.parse(document.getElementById('params').value);
+        document.getElementById('request').value = JSON.stringify({
+            "jsonrpc": "2.0",
+            "method": method,
+            "params": params,
+            "id": "*",
+            "auth": "********"
+        });
+        let responseHandler = function(response) {
+            document.getElementById('response').value = JSON.stringify(response);
+            console.log(response);
+        };
+        requestZabbixAPI(url, user, password, method, params, /* successHandler */responseHandler, /* errorHandler */responseHandler);
     }, false);
 </script>
 </html>
