--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         margin-top: 1em;
         border-top: solid 1px black;
     }
+    .result > div { margin-top: 1em; }
 </style>
 </head>
 <body>
@@ -40,10 +41,10 @@
         </p>
         <button id="get">get</button>
         <div class="result">
-            <h3>request:</h3>
+            <div>request:</div>
             <textarea id="request" rows="2" readonly></textarea>
-            <h3>response:</h3>
-            <textarea id="response" rows="20" readonly></textarea>
+            <div>response:</div>
+            <textarea id="response" rows="15" readonly></textarea>
         </div>
     </div>
 </body>
