--- a/index.html
+++ b/index.html
@@ -7,25 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-    textarea { resize: vertical; }
-    button {
-        font-size: 1.5em;
-        margin: 1em;
-        padding: 0 2em;
-    }
-    body > div > p { margin: 0.5em 1em; }
-    body > div > p > label { margin-right: 0.3em; }
-    body > div > p > input { margin-right: 1em; }
-    #url, #params { width: 50%; }
-    #request, #response { width: 100%; }
-    .result {
-        margin-top: 1em;
-        border-top: solid 1px black;
-    }
-    .result > div { margin-top: 1em; }
-</style>
+<link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>zabbix api console</h1>
