--- a/item_list.html
+++ b/item_list.html
@@ -1,35 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>zabbix item list</title>
-<meta charset="utf-8">
-<meta name="description" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-    textarea { resize: vertical; }
-    button {
-        font-size: 1.5em;
-        margin: 1em;
-        padding: 0 2em;
-    }
-    body > div > p { margin: 0.5em 1em; }
-    body > div > p > label { margin-right: 0.3em; }
-    body > div > p > input { margin-right: 1em; }
-    #url, #params { width: 50%; }
-    #request, #response { width: 100%; }
-    .result {
-        margin-top: 1em;
-        border-top: solid 1px black;
-    }
-    .result > div { margin-top: 1em; }
-    table { border-collapse: collapse; }
-    table, th, td { border: solid 1px #555; }
-    th { color: #fff; background-color: #336699; }
-    tr:nth-child(even) { background-color: #dfffff; }
-</style>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>zabbix item list</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>zabbix item list</h1>
