--- a/trigger_list.html
+++ b/trigger_list.html
@@ -1,33 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>zabbix trigger list</title>
-<meta charset="utf-8">
-<meta name="description" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-    textarea { resize: vertical; }
-    button {
-        font-size: 1.5em;
-        margin: 1em;
-        padding: 0 2em;
-    }
-    body > div > p { margin: 0.5em 1em; }
-    body > div > p > label { margin-right: 0.3em; }
-    body > div > p > input { margin-right: 1em; }
-    #url, #params { width: 50%; }
-    #request, #response { width: 100%; }
-    .result {
-        margin-top: 1em;
-        border-top: solid 1px black;
-    }
-    .result > div { margin-top: 1em; }
-    table { border-collapse: collapse; }
-    table, th, td { border: solid 1px black; }
-</style>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>zabbix trigger list</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>zabbix trigger list</h1>
@@ -45,12 +25,15 @@
 <script src="./api.js"></script>
 
 <script>
-    //  API const 
-    var METHOD = "trigger.get";
-    var PARAMS = {
-        "output": ["triggerid", "description", "expression", "status"],
-        "selectGroups": "extend"
-    };
+    //  const
+    var SEVERITY = [    /* priority */
+        "default",
+        "information",
+        "warning",
+        "average",
+        "high",
+        "disaster"
+    ];
     var STATUS = ["Enabled", "Disabled"];
     /* 
     // ex. results
@@ -72,48 +55,84 @@
     ]
     */
 
+
     //  default input
     document.getElementById('url').value = "http://127.0.0.1/api_jsonrpc.php";
     document.getElementById('user').value = "Admin";
     document.getElementById('password').value = "zabbix";
 
+
     //  make table
-    function makeTable(resultsList) {
-        //  make tag
-        var make = function(tag, value){
+    function makeTable(url, user, password) {
+        let template_params = {
+            "output": ["templateid", "name"],
+            "with_triggers": true,
+            "selectTriggers": ["triggerid"]
+        };
+        let trigger_params = {
+            "output": ["triggerid", "description", "priority", "expression", "recovery_expression", "status"],
+            "selectGroups": ["groupid", "name"]
+        };
+        //  templates
+        var templates = requestZabbixAPI(url, user, password, "template.get", template_params);
+
+        //  triggers
+        var arr = [];
+        templates.forEach(function (v) {
+            arr = arr.concat(v.triggers.map(function (o) { return o.triggerid; }));
+        });
+        trigger_params['triggerids'] = arr;
+        var triggers = requestZabbixAPI(url, user, password, "trigger.get", trigger_params);
+
+        //  make table
+        arr = [];
+        templates.forEach(function (t) {
+            t.triggers.forEach(function (tr) {
+                var trigger = triggers.find(function (i) {
+                    return (tr.triggerid == i.triggerid);
+                });
+                arr[arr.length] = {
+                    'template': t.name,
+                    'name': trigger.description,
+                    'severity': SEVERITY[Number(trigger.priority)],
+                    'problem expression': trigger.expression,
+                    'recovery expression': trigger.recovery_expression,
+                    'status': STATUS[Number(trigger.status)]
+                };
+            });
+        });
+        return arr;
+    }
+
+
+    //  markup table
+    function markupTable(arr) {
+        //  markup
+        var $ = function (tag, value) {
             let $tag = document.createElement(tag);
-            if (arguments.length >= 2){
+            if (arguments.length >= 2) {
                 $tag.innerHTML = value;
             }
             return $tag;
         };
-        var $table = make('table');
-        let $caption = make('caption', resultsList.length + " triggers, " + (new Date()).toString());
-        let $thead = make('thead', "<tr><th>status</th><th>description</th><th>expression</th><th>groups</th></tr>");
-        //  make tbody
-        var $tbody = make('tbody');
-        resultsList.forEach(function(r){   
-            let $status = make('td', STATUS[Number(r.status)]);
-            let $description = make('td', r.description);
-            let $expression = make('td', r.expression);
-            // groups
-            var $groups = make('td');
-            r.groups.forEach(function(g){
-                let $div = make('div', g.name);
-                $groups.appendChild($div);
-            });
-            // table row
-            let $tr = make('tr'); 
-            [$status, $description, $expression, $groups].forEach(function(e){
-                $tr.appendChild(e);
+        var $table = $('table');
+        let $caption = $('caption', arr.length + " items, " + (new Date()).toString());
+        let $thead = $('thead', '<tr><th>' + Object.keys(arr[0]).join('</th><th>') + '</th></tr>');
+        //  markup tbody
+        var $tbody = $('tbody');
+        arr.forEach(function (r) {
+            var $tr = $('tr');
+            Object.values(r).forEach(function (v) {
+                $tr.appendChild($('td', v));
             });
             $tbody.appendChild($tr);
         });
-        [$caption, $thead, $tbody].forEach(function(e){
+        [$caption, $thead, $tbody].forEach(function (e) {
             $table.appendChild(e);
         });
         return $table;
     }
+
 
     document.getElementById('get').addEventListener("click", function () {
         let url = document.getElementById('url').value;
@@ -121,7 +140,7 @@
         let password = document.getElementById('password').value;
         let $result = document.getElementById('result');
         $result.innerHTML = "";
-        let $table = makeTable(requestZabbixAPI(url, user, password, METHOD, PARAMS));
+        let $table = markupTable(makeTable(url, user, password));
         $result.appendChild($table);
     }, false);
 </script>
