--- a/template_list.html
+++ b/template_list.html
@@ -41,9 +41,12 @@
         <div id="result">
         </div>
     </div>
+    <hr>
+    <footer><a target="_blank" href="https://www.zabbix.com/documentation/current/manual/api">zabbix api manual</footer>
 </body>
-<script src="./api.js"></script>
 
+<script src="./es6-promise.auto.min.js"></script>
+<script src="./api.js"></script>
 <script>
     //  API const 
     var METHOD = "template.get";
